<resources>
    <string name="app_name">News</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bookmark">북마크</string>
    <string name="title_search">검색</string>
    <string name="api_key">9aafaa6c8c294e47b06b825bd1de0e08</string>
    <string name="news_author">author</string>
    <string name="news_title">title</string>
    <string name="news_description">description</string>
    <string name="news_content"> : %s</string>
    <string name="search">검색</string>
    <string name="search_hint">검색어를 입력해주세요.</string>
    <string name="disable_loadMore">더 불러올 데이터가 없습니다.</string>
    <string name="no_search_data">검색결과가 없습니다.</string>
    <string name="news_detail_source">Source : %s</string>
    <string name="news_detail_author">Author : %s</string>
    <string name="no_book_mark">저장된 기사가 없습니다.</string>
</resources>