<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="bookmark"
            type="com.kkc.news.local.roomData.BookMark" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:padding="16dp"
        android:background="@drawable/background_white_black_stroke">

        <ImageView
            android:id="@+id/bookMarkState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@android:drawable/star_on"/>

        <TextView
            android:id="@+id/authorTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/descriptionTitle"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/news_author"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/authorTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:newsContent="@{bookmark.author}"/>

        <TextView
            android:id="@+id/newsTitleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author"
            app:layout_constraintEnd_toEndOf="@id/descriptionTitle"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/news_title"/>

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/newsTitleTitle"
            app:layout_constraintTop_toTopOf="@id/newsTitleTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:newsContent="@{bookmark.title}"/>

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newsTitle"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/news_description"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/descriptionTitle"
            app:layout_constraintTop_toTopOf="@id/descriptionTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="3"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:newsContent="@{bookmark.description}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>