<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="searchInfo"
            type="com.kkc.news.ui.search.SearchViewModel" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchFragment"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:background="@drawable/background_white_stroke_black_radius_8">

            <EditText
                android:id="@+id/keyword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/doSearch"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_616161"
                android:hint="@string/search_hint"
                android:text="@={searchInfo.keyword}"
                android:maxLines="1"
                android:background="@color/transparent"/>

            <Button
                android:id="@+id/doSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/search"
                android:onClick="@{() -> searchInfo.onSearchClick()}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sortType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/searchContainer"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:entries="@array/sort_types"
            android:onItemSelected="@{(parent, selectedView, selectedPosition, id) -> searchInfo.onSortChange(selectedPosition)}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchedArticles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/no_search_data"
            android:visibility="@{searchInfo.noData ? View.VISIBLE : View.GONE, default=gone}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>